# KntuScheduleBot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  parse.py  pyproject.toml  requirements.txt  schedule.json
.github/workflows/: ci.yml  deploy.yml
bot/commands/: __init__.py  help.py  schedule.py  start.py
bot/core/: __init__.py  config.py  constants.py  logging.py
bot/database/: __init__.py  base.py
bot/database/crud/: __init__.py  lesson.py
bot/database/models/: lesson.py
bot/handlers/: __init__.py  menu.py  schedule.py
bot/keyboards/: __init__.py  menu.py
bot/middlewares/: __init__.py  database.py  i18n.py
bot/services/: __init__.py  holidays.py  parser.py  schedule.py
bot/utils/: __init__.py  formatters.py  text.py  xls_parsing.py  xls_schedule.py
locales/uk/: messages.ftl
